# insurance-app

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml  run-app.yml
alembic/: env.py
alembic/versions/: cfef44a812c6_.py
backend/: Dockerfile
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: policy.py
backend/app/utils/: config.py  seed_db.py
backend/tests/: test_app.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  api.ts  index.tsx  types.ts
frontend/src/components/: PolicyList.tsx
